manifests/instances/automated-pipelines/gitea/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/display-name: gitea
  name: gitea
