manifests/instances/automated-pipelines/gitea/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gitea
  name: gitea
spec:
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: gitea-http
    weight: 100
  wildcardPolicy: None
